--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/tiendagenerica1?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/tiendagenericagit?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 
 spring.datasource.username=root
 spring.datasource.password=1234
